# gameengine

./: .clang-format  .gitignore  CMakeLists.txt  CODEOWNERS  FindASSIMP.cmake  FindSOIL.cmake  LinuxConfig.cmake  MacOSCConfig.cmake  PreLoad.cmake  README.md  WindowsConfig.cmake  build.ps1  buildlinux.sh  buildwin.sh  imgui.ini  vcpkg.json
cmake/: DoxygenLists.txt  Utils.cmake
cmake/linux/: Dependencies.cmake  PreLoad.cmake
cmake/macos/: Dependencies.cmake
cmake/windows/: Dependencies.cmake  PreLoad.cmake
docs/: Doxyfile.in
scripts/: init.sh  init_vcpkg.sh  keep_vcpkg_json_updated.sh  project_vars.sh
scripts/linux/: setup_dependencies.sh
scripts/windows/: add_vcpkg_to_path.sh  init_vcpkg.sh  install_dependencies.sh
source/: main.cpp
source/application/: Application.cpp  Application.hpp
source/asset/: Asset.cpp  Asset.hpp
source/asset/model/: Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelAsset.cpp  ModelAsset.hpp
source/asset/texture/: Texture.cpp  Texture.hpp  TextureAsset.cpp  TextureAsset.hpp
source/config/: Config.hpp.in
source/dependencies/: _glm.hpp  _sdl.hpp  _uuid.hpp
source/ecs/: Component.cpp  Component.hpp  Entity.cpp  Entity.hpp  EntityMgr.cpp  EntityMgr.hpp  Scene.cpp  Scene.hpp
source/ecs/enable/: Enable.cpp  Enable.hpp
source/ecs/transform/: Transform.cpp  Transform.hpp
source/event/: Event.cpp  Event.hpp  EventBus.cpp  EventBus.hpp  EventHandler.cpp  EventHandler.hpp  EventListener.hpp
source/input/: InputEvent.cpp  InputEvent.hpp  InputHandler.cpp  InputHandler.hpp
source/layer/layer/: Layer.cpp  Layer.hpp
source/layer/layers/gui-layer/: GUILayer.cpp  GUILayer.hpp
source/layer/layerstack/: LayerStack.cpp  LayerStack.hpp
source/public/: Public.hpp  glm.hpp  soil.hpp  typedef.hpp
source/render/: Renderer.cpp  Renderer.hpp
source/utils/: List.hpp  Logging.cpp  Logging.hpp  Reflection.hpp  TermColors.cpp  TermColors.hpp  Utils.cpp  Utils.hpp
